--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="shortcut icon" href="a-level-ico.png"/>
     <title>Demo: makasin</title>
     <link href="https://fonts.googleapis.com/css?family=Righteous|Russo+One" rel="stylesheet"> 
-    <link rel="stylesheet" href="index.css"/>
+    <link rel="stylesheet" href="styele.css"/>
   </head>
   <body>
     <nav>
